--- a/app/src/main/res/layout/activity_paperexpand.xml
+++ b/app/src/main/res/layout/activity_paperexpand.xml
@@ -55,7 +55,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#F3F3F3"
+            android:background="@drawable/shape3"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:orientation="vertical">
@@ -67,7 +67,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
                 android:id="@+id/compf"
                 android:onClick="click1"
@@ -85,7 +85,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
                 android:id="@+id/hard"
@@ -104,7 +104,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 android:id="@+id/excel"
                 android:onClick="galleryclick"
@@ -123,7 +123,7 @@ android:id="@+id/excel"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 android:id="@+id/word"
                 android:onClick="galleryclick"
@@ -140,7 +140,7 @@ android:id="@+id/word"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 android:id="@+id/powerpoint"
 
@@ -158,7 +158,7 @@ android:id="@+id/powerpoint"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 android:id="@+id/mix"
@@ -176,7 +176,7 @@ android:id="@+id/mix"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 android:id="@+id/excelhindi"
@@ -194,7 +194,7 @@ android:id="@+id/excelhindi"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 
@@ -213,7 +213,7 @@ android:id="@+id/excelhindi"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 android:id="@+id/powerpointhindi"
@@ -231,7 +231,7 @@ android:id="@+id/powerpointhindi"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 android:id="@+id/computerhindi"
@@ -249,7 +249,7 @@ android:id="@+id/computerhindi"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 android:id="@+id/internethindi"
@@ -268,7 +268,7 @@ android:id="@+id/internethindi"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="28dp"
                 android:layout_marginTop="8dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 android:id="@+id/dbmshindi"
