course ex animation

--- a/app/src/main/res/layout/activity_coursesexpand.xml
+++ b/app/src/main/res/layout/activity_coursesexpand.xml
@@ -67,7 +67,7 @@ android:background="@drawable/shape3"
                     android:layout_marginLeft="28dp"
                     android:layout_marginTop="8dp"
                     android:background="#fff"                    android:fontFamily="sans-serif-condensed"
-
+android:id="@+id/rscit"
                     android:onClick="rscitclick"
                     android:padding="4dp"
                     android:text="RS-CIT"
@@ -85,7 +85,7 @@ android:background="@drawable/shape3"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-
+android:id="@+id/tally"
                     android:onClick="tallyclick"
                     android:padding="4dp"
                     android:text="TALLY -ERP 9"
@@ -103,7 +103,7 @@ android:background="@drawable/shape3"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-
+android:id="@+id/hard"
                     android:onClick="hardclick"
                     android:padding="4dp"
                     android:text="HARDWARE NETWORKING"
@@ -121,7 +121,7 @@ android:background="@drawable/shape3"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-
+android:id="@+id/pmkvy"
                     android:onClick="pmkvyclick"
                     android:padding="4dp"
                     android:text="PMKVY (Skill Development Course)"
@@ -139,7 +139,7 @@ android:background="@drawable/shape3"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-
+android:id="@+id/pwd"
                     android:onClick="pwdclick"
                     android:padding="4dp"
                     android:text="Persons with Disability Courses"
