--- a/app/src/main/res/layout/activity_aboutexpand.xml
+++ b/app/src/main/res/layout/activity_aboutexpand.xml
@@ -69,7 +69,7 @@
                     android:layout_marginBottom="8dp"
                     android:layout_marginLeft="28dp"
                     android:layout_marginTop="8dp"
-
+android:visibility="invisible"
 
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
@@ -98,6 +98,7 @@
                     android:text="contact and location"
                     android:textAllCaps="true"
                     android:textColor="#000"
+android:visibility="invisible"
                     android:textSize="20sp"
                     android:textStyle="bold"
 
@@ -119,7 +120,7 @@
                     android:textColor="#000"
                     android:textSize="20sp"
                     android:textStyle="bold"
-
+android:visibility="invisible"
                     android:transitionName="@string/simple4" />
 
 
