--- a/app/src/main/res/layout/activity_coursesexpand.xml
+++ b/app/src/main/res/layout/activity_coursesexpand.xml
@@ -68,6 +68,7 @@ android:background="@drawable/shape3"
                     android:layout_marginTop="8dp"
                     android:background="#fff"                    android:fontFamily="sans-serif-condensed"
 android:id="@+id/rscit"
+                    android:visibility="invisible"
                     android:onClick="rscitclick"
                     android:padding="4dp"
                     android:text="RS-CIT"
@@ -85,7 +86,8 @@ android:id="@+id/rscit"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-android:id="@+id/tally"
+android:id="@+id/tally"                     android:visibility="invisible"
+
                     android:onClick="tallyclick"
                     android:padding="4dp"
                     android:text="TALLY -ERP 9"
@@ -103,7 +105,8 @@ android:id="@+id/tally"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-android:id="@+id/hard"
+android:id="@+id/hard"                     android:visibility="invisible"
+
                     android:onClick="hardclick"
                     android:padding="4dp"
                     android:text="HARDWARE NETWORKING"
@@ -121,7 +124,8 @@ android:id="@+id/hard"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-android:id="@+id/pmkvy"
+android:id="@+id/pmkvy"                     android:visibility="invisible"
+
                     android:onClick="pmkvyclick"
                     android:padding="4dp"
                     android:text="PMKVY (Skill Development Course)"
@@ -139,7 +143,8 @@ android:id="@+id/pmkvy"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-android:id="@+id/pwd"
+android:id="@+id/pwd"                     android:visibility="invisible"
+
                     android:onClick="pwdclick"
                     android:padding="4dp"
                     android:text="Persons with Disability Courses"
