--- a/app/src/main/res/layout/activity_aboutexpand.xml
+++ b/app/src/main/res/layout/activity_aboutexpand.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+android:onClick="back"
     tools:context="com.education.rajneesh.jrec.MainActivity">
 
 
