--- a/app/src/main/res/layout/activity_coursesexpand.xml
+++ b/app/src/main/res/layout/activity_coursesexpand.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+android:onClick="back"
     tools:context="com.education.rajneesh.jrec.MainActivity">
 
 
@@ -56,29 +56,31 @@
                 android:layout_height="0dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-android:background="@drawable/shape3"
+                android:background="@drawable/shape3"
                 android:orientation="vertical">
 
 
                 <TextView
+                    android:id="@+id/rscit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginLeft="28dp"
                     android:layout_marginTop="8dp"
-                    android:background="#fff"                    android:fontFamily="sans-serif-condensed"
-android:id="@+id/rscit"
-                    android:visibility="invisible"
+                    android:background="#fff"
+                    android:fontFamily="sans-serif-condensed"
                     android:onClick="rscitclick"
                     android:padding="4dp"
                     android:text="RS-CIT"
                     android:textAllCaps="true"
                     android:textColor="#000"
                     android:textSize="20sp"
+                    android:textStyle="bold"
 
-                    android:textStyle="bold" />
+                    android:visibility="invisible" />
 
                 <TextView
+                    android:id="@+id/tally"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -86,18 +88,19 @@ android:id="@+id/rscit"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-android:id="@+id/tally"                     android:visibility="invisible"
-
                     android:onClick="tallyclick"
+
                     android:padding="4dp"
                     android:text="TALLY -ERP 9"
                     android:textAllCaps="true"
                     android:textColor="#000"
                     android:textSize="20sp"
+                    android:textStyle="bold"
 
-                    android:textStyle="bold" />
+                    android:visibility="invisible" />
 
                 <TextView
+                    android:id="@+id/hard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -105,18 +108,19 @@ android:id="@+id/tally"                     android:visibility="invisible"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-android:id="@+id/hard"                     android:visibility="invisible"
-
                     android:onClick="hardclick"
+
                     android:padding="4dp"
                     android:text="HARDWARE NETWORKING"
                     android:textAllCaps="true"
                     android:textColor="#000"
                     android:textSize="20sp"
+                    android:textStyle="bold"
 
-                    android:textStyle="bold" />
+                    android:visibility="invisible" />
 
                 <TextView
+                    android:id="@+id/pmkvy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -124,18 +128,19 @@ android:id="@+id/hard"                     android:visibility="invisible"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-android:id="@+id/pmkvy"                     android:visibility="invisible"
-
                     android:onClick="pmkvyclick"
+
                     android:padding="4dp"
                     android:text="PMKVY (Skill Development Course)"
-
                     android:textColor="#000"
-                    android:textSize="20sp"
 
-                    android:textStyle="bold" />
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+
+                    android:visibility="invisible" />
 
                 <TextView
+                    android:id="@+id/pwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -143,16 +148,16 @@ android:id="@+id/pmkvy"                     android:visibility="invisible"
                     android:layout_marginTop="8dp"
                     android:background="#fff"
                     android:fontFamily="sans-serif-condensed"
-android:id="@+id/pwd"                     android:visibility="invisible"
-
                     android:onClick="pwdclick"
+
                     android:padding="4dp"
                     android:text="Persons with Disability Courses"
                     android:textAllCaps="false"
                     android:textColor="#000"
                     android:textSize="20sp"
+                    android:textStyle="bold"
 
-                    android:textStyle="bold" />
+                    android:visibility="invisible" />
 
 
             </LinearLayout>
