--- a/app/src/main/res/layout/activity_tally.xml
+++ b/app/src/main/res/layout/activity_tally.xml
@@ -24,11 +24,12 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape3">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#F3F3F3"
+            android:background="@drawable/shape3"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:orientation="vertical">
