--- a/app/src/main/res/layout/activity_pmkvy.xml
+++ b/app/src/main/res/layout/activity_pmkvy.xml
@@ -12,19 +12,23 @@
         android:id="@+id/pmkvy1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F3F3F3"
+        android:background="@drawable/shape3"
         android:elevation="4dp"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        android:layout_margin="8dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginRight="8dp">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape3">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#F3F3F3"
+            android:background="@drawable/shape3"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:orientation="vertical">
