--- a/app/src/main/res/layout/activity_hardware.xml
+++ b/app/src/main/res/layout/activity_hardware.xml
@@ -12,8 +12,11 @@
         android:id="@+id/hards1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="#F3F3F3"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/shape3"
         android:elevation="4dp"
         android:layout_centerVertical="true"
         android:orientation="vertical"
@@ -21,11 +24,12 @@
 
 <ScrollView
     android:layout_width="match_parent"
+    android:background="@drawable/shape3"
     android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="#F3F3F3"
+            android:background="@drawable/shape3"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:orientation="vertical">
