--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -30,7 +30,7 @@
             android:textStyle="bold"
             android:text="contact"
             android:layout_marginLeft="18dp"
-            android:background="#F3F3F3"
+            android:background="#fff"
             android:textColor="#04ABB6"
             android:textAllCaps="true"
             android:layout_marginTop="8dp"
@@ -43,7 +43,7 @@ android:id="@+id/c"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:background="#F3F3F3"
+            android:background="#fff"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="28dp"
             android:textAllCaps="true"
@@ -75,7 +75,7 @@ android:id="@+id/contacts"
             android:text="location"
             android:layout_marginLeft="18dp"
             android:textAllCaps="true"
-            android:background="#F3F3F3"
+            android:background="#fff"
             android:textColor="#04ABB6"
             android:id="@+id/l"
             android:layout_marginTop="8dp"
@@ -87,7 +87,7 @@ android:id="@+id/contacts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:background="#F3F3F3"
+            android:background="#fff"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="28dp"
             android:textColor="#6B6B6B"
