--- a/app/src/main/res/layout/activity_pmkvy.xml
+++ b/app/src/main/res/layout/activity_pmkvy.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="18dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 
@@ -61,7 +61,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#F3F3F3"
+                android:background="#fff"
 
                 android:textColor="#6B6B6B"
                 android:textSize="20sp"
