--- a/app/src/main/res/layout/activity_tally.xml
+++ b/app/src/main/res/layout/activity_tally.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="18dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 
@@ -62,7 +62,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#F3F3F3"
+                android:background="#fff"
 
                 android:textColor="#6B6B6B"
                 android:textSize="20sp"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="18dp"
-                android:background="#F3F3F3"
+                android:background="#fff"
                 android:fontFamily="sans-serif-condensed"
 
 
@@ -95,7 +95,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#F3F3F3"
+                android:background="#fff"
 
                 android:textColor="#6B6B6B"
                 android:textSize="20sp"
